Refactor namespace handling and improve transaction management.
Moved shared logic to `BaseHandler` for cleaner handler architecture. Enhanced namespace utility functions, ensuring robust validation and handling of default namespaces, and streamlined namespace hierarchy operations. Fixed inconsistencies in `SNAPSHOTREAD` command handling and updated tests to align with these changes. Added a demo Docker configuration for easier setup.